--- a/app/src/main/res/drawable/im_n_31.xml
+++ b/app/src/main/res/drawable/im_n_31.xml
@@ -1,5 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="64dp" android:viewportHeight="64" android:viewportWidth="64" android:width="64dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="128dp" android:viewportHeight="200" android:viewportWidth="200" android:width="128dp">
       
-    <path android:fillColor="#6B6A67" android:pathData="M50.5,35.1C39,35.1 26.3,26 32.1,11.2l0,0c-12.4,-0.1 -20.9,10 -20.9,20.8c0,11.5 9.3,20.9 20.9,20.9c10.5,0 19.2,-7.6 20.7,-17.7C52.8,35.1 51.3,35.1 50.5,35.1zM32.4,49.8c-9.9,0 -17.9,-8 -17.9,-17.9c0,-8.2 5.8,-15.1 13.3,-17.3l0,0.1c-1.8,12.5 7.1,23 20.7,24.2l0,0C45,45.7 40.2,49.5 32.4,49.8z"/>
+    <path android:fillColor="#8ed1e9" android:pathData="M171.31,128.34c-53.94,0 -97.83,-43.89 -97.83,-97.37A106.58,106.58 0,0 1,77.14 4,97.67 97.67,0 0,0 4,98.63C4,152.11 47.89,196 101.83,196A97.78,97.78 0,0 0,196 125.14,87 87,0 0,1 171.31,128.34Z"/>
+      
+    <path android:fillColor="#008fbf" android:pathData="M65.26,17.71a120.47,120.47 0,0 0,-0.91 12.8c0,59 48,106.51 107,106.51a80.92,80.92 0,0 0,10.51 -0.46,88.6 88.6,0 0,1 -80,50.29c-48.91,0 -88.69,-39.77 -88.69,-88.23A88.56,88.56 0,0 1,65.26 17.71M77.14,4A97.67,97.67 0,0 0,4 98.63C4,152.11 47.89,196 101.83,196A97.78,97.78 0,0 0,196 125.14a107.28,107.28 0,0 1,-24.69 3.2c-53.94,0 -97.83,-43.89 -97.83,-97.37A103.84,103.84 0,0 1,77.14 4Z"/>
     
 </vector>
